--- a/arch/arm/boards/Makefile
+++ b/arch/arm/boards/Makefile
@@ -1,6 +1,7 @@
 # keep sorted by CONFIG_* macro name.
 obj-$(CONFIG_MACH_ANIMEO_IP)			+= animeo_ip/
 obj-$(CONFIG_MACH_ARCHOSG9)			+= archosg9/
+obj-$(CONFIG_MACH_ARKONA_AT1006)		+= arkona-at1006/
 obj-$(CONFIG_MACH_AT91SAM9260EK)		+= at91sam9260ek/
 obj-$(CONFIG_MACH_AT91SAM9261EK)		+= at91sam9261ek/
 obj-$(CONFIG_MACH_AT91SAM9263EK)		+= at91sam9263ek/
