--- a/images/Makefile.imx
+++ b/images/Makefile.imx
@@ -109,6 +109,11 @@ imximage-$(CONFIG_MACH_DFI_FS700_M60) += start_imx6q_dfi_fs700_m60_6q_nanya.pblx
 FILE_barebox-dfi-fs700-m60-6q-nanya.img = start_imx6q_dfi_fs700_m60_6q_nanya.pblx.imximg
 image-$(CONFIG_MACH_DFI_FS700_M60) += barebox-dfi-fs700-m60-6q-nanya.img
 
+pblx-$(CONFIG_MACH_ARKONA_AT1006) += start_imx6d_arkona_at1008
+CFG_start_imx6d_arkona_at1008.pblx.imximg = $(board)/arkona-at1006/flash-header-at1008.imxcfg
+FILE_barebox-arkona_at1008.img = start_imx6d_arkona_at1008.pblx.imximg
+image-$(CONFIG_MACH_ARKONA_AT1006) += barebox-arkona_at1008.img
+
 pblx-$(CONFIG_MACH_SABRELITE) += start_imx6q_sabrelite
 CFG_start_imx6q_sabrelite.pblx.imximg = $(board)/freescale-mx6-sabrelite/flash-header-mx6-sabrelite.imxcfg
 FILE_barebox-freescale-imx6q-sabrelite.img = start_imx6q_sabrelite.pblx.imximg
