ARM/Arkona: add a special command to configure the clock generators
Two of these devices are present on the TA1006 baseboard and needs to be
configured in order to load and use the FPGA devices.

Signed-off-by: Juergen Beisert <jbe@pengutronix.de>

--- a/arch/arm/boards/arkona-at1006/Makefile
+++ b/arch/arm/boards/arkona-at1006/Makefile
@@ -3,3 +3,4 @@ obj-y += flash-header-at1008.dcd.o
 extra-y += flash-header-at1008.dcd.S
 extra-y += flash-header-at1008.dcd
 lwl-y += lowlevel.o
+obj-y += command_lmk03806.o
