ARM/Arkona: fix MicroWire setup
Some of the pins are inputs and should be configured differently

Signed-off-by: Juergen Beisert <jbe@pengutronix.de>

--- a/arch/arm/dts/imx6d-arkona-link4.dts
+++ b/arch/arm/dts/imx6d-arkona-link4.dts
@@ -26,12 +26,13 @@
 	hog {
 		pinctrl_hog: microwire {
 			fsl,pins = <
+				/* microwire pins to the clock generators */
 				MX6QDL_PAD_NANDF_CLE__GPIO6_IO07 0x00000070 /* CLK1 */
 				MX6QDL_PAD_SD4_CLK__GPIO7_IO10 0x00000070 /* CLK2 */
 				MX6QDL_PAD_SD3_DAT4__GPIO7_IO01 0x00000070 /* LE1 */
 				MX6QDL_PAD_SD3_DAT5__GPIO7_IO00 0x00000070 /* LE2 */
-				MX6QDL_PAD_SD3_DAT6__GPIO6_IO18 0x00000070 /* FTEST1 */
-				MX6QDL_PAD_SD3_DAT7__GPIO6_IO17 0x00000070 /* FTEST2 */
+				MX6QDL_PAD_SD3_DAT6__GPIO6_IO18 0x00010040 /* FTEST1 */
+				MX6QDL_PAD_SD3_DAT7__GPIO6_IO17 0x00010040 /* FTEST2 */
 				MX6QDL_PAD_SD2_CMD__GPIO1_IO11 0x00000070 /* DATA */
 			>;
 		};
