--- a/drivers/net/Kconfig
+++ b/drivers/net/Kconfig
@@ -82,6 +82,14 @@ config DRIVER_NET_FEC_IMX
 	depends on ARCH_HAS_FEC_IMX
 	select PHYLIB
 
+config ETHER_STARTUP
+	bool "probe phy on startup"
+	depends on DRIVER_NET_FEC_IMX
+	default y
+	help
+	  Probe the external phy when the driver starts up. Else delay the
+	  probe, for example to wait for an FPGA to be loaded.
+
 config DRIVER_NET_GIANFAR
 	bool "Gianfar Ethernet"
 	depends on ARCH_MPC85XX
