--- a/images/Makefile.layerscape
+++ b/images/Makefile.layerscape
@@ -52,5 +52,10 @@ $(obj)/barebox-tqmls1046a-qspi.image: $(obj)/start_tqmls1046a.pblb \
 		$(board)/tqmls1046a/tqmls1046a_pbi.cfg
 	$(call if_changed,lspbl_spi_image)
 
+$(obj)/barebox-arkona-c300.image: $(obj)/start_arkona_c300.pblb \
+		$(board)/tqmls1046a/arkona_c300_rcw.cfg \
+		$(board)/tqmls1046a/tqmls1046a_pbi.cfg
+	$(call if_changed,lspbl_spi_image)
+
 image-$(CONFIG_MACH_TQMLS1046A) += barebox-tqmls1046a-sd.image \
-	barebox-tqmls1046a-qspi.image
+	barebox-tqmls1046a-qspi.image barebox-arkona-c300.image
