arkona C300: rcw adjustments
As requested in
<8b823d12-8a75-1fd1-6743-077145206e0d@arkona-technologies.de>

Signed-off-by: Sascha Hauer <s.hauer@pengutronix.de>

--- a/arch/arm/boards/tqmls1046a/arkona_c300_rcw.cfg
+++ b/arch/arm/boards/tqmls1046a/arkona_c300_rcw.cfg
@@ -47,7 +47,7 @@
 # (370:370) RTC                         : 0x1
 # (371:371) SDHC_BASE                   : 0x0
 # (372:372) IRQ_OUT                     : 0x1
-# (373:381) IRQ_BASE                    : 0x0
+# (373:381) IRQ_BASE                    : 0x1fe
 # (382:383) SPI_BASE                    : 0x0
 # (384:386) IFC_GRP_A_EXT               : 0x1
 # (393:395) IFC_GRP_D_EXT               : 0x0
@@ -82,5 +82,5 @@ aa55aa55 01ee0100
 # RCW
 0c140010 0e000000 00000000 00000000
 11338888 40000006 40025000 c1000000
-00000000 00000000 00000000 00036800
+00000000 00000000 00000000 00036ff8
 20004504 24780208 00000096 00000001
