arkona C300: Fix some GPIO names
As requested in
<8b823d12-8a75-1fd1-6743-077145206e0d@arkona-technologies.de>

Signed-off-by: Sascha Hauer <s.hauer@pengutronix.de>

--- a/arch/arm/dts/fsl-tqmls1046a-arkona-c300.dts
+++ b/arch/arm/dts/fsl-tqmls1046a-arkona-c300.dts
@@ -64,7 +64,7 @@
 			  "", "", "", "",
 			  "", "", "", "",
 			  "", "", "", "",
-			  "ps2_present", "ps1_present", "io_present", "io_pwr_goodn",
+			  "ps1_present", "ps2_present", "io_presentn", "io_pwr_goodn",
 			  "module_slot_id2", "module_slot_id1", "module_slot_id0", "";
 };
 
